Fix overflow content

--- a/assets/css/base/_reset.scss
+++ b/assets/css/base/_reset.scss
@@ -15,7 +15,6 @@ body {
     display: flex;
     flex-direction: column;
     color: var(--color);
-    overflow-x: hidden;
     background-color: var(--backgroundColor);
     transition: all $fastDuration ease-in-out;
 }
