--- a/assets/css/base/_utilities.scss
+++ b/assets/css/base/_utilities.scss
@@ -6,6 +6,10 @@
     padding-right: 1rem;
 }
 
+.overflow-h {
+    overflow: hidden;
+}
+
 .color-primary {
     color: $primaryColor;
 }
