--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   color: var(--color);
-  overflow-x: hidden;
   background-color: var(--backgroundColor);
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
@@ -108,6 +107,10 @@ textarea {
   margin: 0 auto;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.overflow-h {
+  overflow: hidden;
 }
 
 .color-primary {
